[package]
name = "kis-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
kis-api = { path= "../kis-api"}
reqwest = { version = "0.11.12", default-features = false, features = ["rustls-tls", "json", "multipart", "brotli", "gzip", "deflate"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
